--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>My first QR Code generator!!</h1>
 
     <div>
-        <label for="">Texto del QR</label>
+        <label>Texto del QR</label>
         <input type="text" id="textQR">
         <button id="btn">Generar</button>
     </div>
